Bug 704094 - part 2 - Adds an alltabs dropdown to the inspector sidebar

--- a/browser/themes/linux/devtools/debugger.css
+++ b/browser/themes/linux/devtools/debugger.css
@@ -4,6 +4,6 @@
 
 %include ../../shared/devtools/debugger.inc.css
 
-.devtools-sidebar-tabs > tabs > tab {
+.devtools-sidebar-tabs tabs > tab {
   min-height: 24px !important;
 }
