--- a/browser/themes/windows/devtools/debugger.css
+++ b/browser/themes/windows/devtools/debugger.css
@@ -4,7 +4,7 @@
 
 %include ../../shared/devtools/debugger.inc.css
 
-.devtools-sidebar-tabs > tabs > tab {
+.devtools-sidebar-tabs tabs > tab {
   min-height: 22px !important;
 }
 
